--- a/client/app/styles/globals.scss
+++ b/client/app/styles/globals.scss
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	display: flex;
-	min-height: 100vh;
+	min-height: 100svh;
 
 	flex-direction: column;
 	
